// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TargetDetails/Standards Multiple Standards 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <p>
    <strong>
      S-3a
    </strong>
     
    <p>
      Mock standard
      <style
        jsx={true}
      >
        
      p {
        margin-top: 1em;
      }
    
      </style>
    </p>
  </p>
  <p>
    <strong>
      S-3b
    </strong>
     
    <p>
      Mock standard
      <style
        jsx={true}
      >
        
      p {
        margin-top: 1em;
      }
    
      </style>
    </p>
  </p>
  <p>
    <strong>
      S-3c
    </strong>
     
    <p>
      Mock standard
      <style
        jsx={true}
      >
        
      p {
        margin-top: 1em;
      }
    
      </style>
    </p>
  </p>
</div>
`;

exports[`Storyshots TargetDetails/Standards One Standard 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <p>
    <strong>
      S-3a
    </strong>
     
    <p>
      Mock standard
      <style
        jsx={true}
      >
        
      p {
        margin-top: 1em;
      }
    
      </style>
    </p>
  </p>
</div>
`;
